<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_list"
    android:id="@+id/mainColor">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/seven"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/eight"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/nine"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/four"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/five"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/six"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/two"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/three"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/zero"
            app:layout_constraintEnd_toEndOf="@+id/button8"
            app:layout_constraintStart_toStartOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/clear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/parenthesesOpenText"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/parenthesesCloseText"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/divide"
            app:layout_constraintStart_toEndOf="@+id/button13"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/backspace"
            app:layout_constraintEnd_toEndOf="@+id/button14"
            app:layout_constraintStart_toStartOf="@+id/button14"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/multiply"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/subtract"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/add"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/equals"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toBottomOf="@+id/button18" />

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalcButtonStyle"
            android:text="@string/point"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>